SLLS-247 enable test for full folder hotspots scan